[gd_scene load_steps=5 format=3 uid="uid://bpklydfmdr7rk"]

[ext_resource type="Script" path="res://scenes/Segunda/segunda.gd" id="1_5aixv"]
[ext_resource type="Theme" uid="uid://bxah0tyro0t5n" path="res://themes/Primera.tres" id="2_qg7iu"]
[ext_resource type="FontFile" uid="uid://bns7q0bqyydbv" path="res://assets/fonts/Daydream.ttf" id="2_wdhs7"]

[sub_resource type="Theme" id="Theme_c6fw4"]
default_base_scale = 0.28
default_font = ExtResource("2_wdhs7")
default_font_size = 12

[node name="Segunda" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5aixv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.72549, 0.933333, 0.862745, 1)

[node name="Send" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = 211.0
offset_right = 104.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_c6fw4")
theme_override_colors/font_hover_color = Color(0.336, 0.379733, 0.4, 1)
theme_override_colors/font_focus_color = Color(0.509804, 0.576471, 0.607843, 1)
theme_override_colors/font_color = Color(0.509804, 0.576471, 0.607843, 1)
theme_override_colors/font_outline_color = Color(0.588235, 0.745098, 0.694118, 1)
theme_override_constants/outline_size = 50
theme_override_constants/align_to_largest_stylebox = 0
theme_override_font_sizes/font_size = 30
text = "Mandar Query"
flat = true

[node name="Clear" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = 74.0
offset_right = 372.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_c6fw4")
theme_override_colors/font_hover_color = Color(0.336, 0.379733, 0.4, 1)
theme_override_colors/font_focus_color = Color(0.509804, 0.576471, 0.607843, 1)
theme_override_colors/font_color = Color(0.509804, 0.576471, 0.607843, 1)
theme_override_colors/font_outline_color = Color(0.588235, 0.745098, 0.694118, 1)
theme_override_constants/outline_size = 50
theme_override_constants/align_to_largest_stylebox = 0
theme_override_font_sizes/font_size = 30
text = "Limpiar
"
flat = true

[node name="Input" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.0
offset_top = -162.0
offset_right = -74.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qg7iu")
placeholder_text = "- Nombre 
- Descripcion
- Sintomas
- Dosis recomendada
- Efectos_secundarios
- restricciones 
- creado en (Fecha/Hora)
- actualizado_en (Fecha/hora)"
wrap_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 380.0
offset_top = 48.0
offset_right = 775.0
offset_bottom = 163.0
theme = ExtResource("2_qg7iu")
theme_override_colors/default_color = Color(0.509804, 0.576471, 0.607843, 1)
bbcode_enabled = true
text = "[center][/center]"

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -66.0
offset_right = 413.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qg7iu")
theme_override_font_sizes/font_size = 30
item_count = 4
item_0/text = "Interacciones"
item_1/text = "Medicamento"
item_2/text = "Notificaciones"
item_3/text = "Receta"

[connection signal="pressed" from="Send" to="." method="_on_send_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
